# ReconForge

./: .gitignore  LICENSE  QUICKSTART.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  __init__.py
reconforge/: __init__.py  cli.py
reconforge/core/: __init__.py  config.py  logging.py  models.py  paths.py  results_store.py  risk_tags.py  scope.py  sqlite_store.py  targets.py
reconforge/recon/: __init__.py  banners.py  discovery.py  http_analysis.py  ports.py
reconforge/reporting/: __init__.py  html_report.py  json_report.py
reconforge/reporting/templates/: report.html.j2
tests/: __init__.py  test_banners.py  test_cli.py  test_http_analysis.py  test_ports.py  test_report_workflow.py  test_results_store.py  test_risk_tags.py  test_scope.py  test_sqlite_store.py  test_targets.py
